--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body,h2{
 }
 .landing
 {
-background-image: url('../img/pexels-thepaintedsquare-858094.jpg');
+background-image: url('/pexels-thepaintedsquare-858094.jpg');
 background-size: cover;
 background-position: center;
 height: 100vh;
@@ -40,16 +40,9 @@ header
 {
     color: var(--red);
 }
-nav
-{
-    flex: 2;
-    display: flex;
-    align-items: center;
-}
-nav a
-{
-    flex:1;
-    
+nav a{
+    margin-left: 10px;
+    margin-right: 20px;    
 }
 nav a:hover
 {
